Modified Create and Join Page

--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+::view-transition-old(root), ::view-transition-new(root) {
+    animation: none;
+    mix-blend-mode: normal;
+}
